--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; kais-code-factor. Much aloha at HTML5Up for inspiration.</a>.</p>
 					</footer>
 
 			</div>
