hope the form redirects to mailto.

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 								<section>
 									<h3 class="major">Form</h3>
-									<form method="post" action="#">
+									<form method="GET" action="mailto:kl.hawaii@gmail.com">
 										<div class="fields">
 											<div class="field half">
 												<label for="demo-name">Name</label>
@@ -331,7 +331,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											</div>
 										</div>
 										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="primary" /></li>
+											<li><input type="submit" value="Send Message" class="primary" 
+												/></li>
 											<li><input type="reset" value="Reset" /></li>
 										</ul>
 									</form>
@@ -343,7 +344,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; kais-code-factor. Much aloha at HTML5Up for inspiration.</a>.</p>
+						<p class="copyright">&copy; kais-code-factor. 2019</p>
 					</footer>
 
 			</div>
