--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#work">Portfolio</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li><a href="https://kais-code-factory.netlify.com/">Code-Blog</a></li>
