--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Portfolio</a></li>
-								<li><a href="#about">Goals and Progress</a></li>
+								<li><a href="#about">Goals</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="https://kais-code-factory.netlify.com/">Code-Blog</a></li>
+								<li><a href="https://kais-code-factory.netlify.com/">Blog</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
