fixed up some design stuff

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 					<header id="header">
 						<div class="logo">
 							<span class="icon fa-diamond"></span>
+							<!-- need to get image to appear instead of the diamond icon -->
+							<!-- <img class= "icon" src="images/profile.png" alt=""/> -->
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -32,12 +34,22 @@
 							<ul>
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Portfolio</a></li>
-								<li><a href="#about">Goals</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#about">Progress</a></li>
+								<li><a href="#about">Resume</a></li>
+								<!-- <li><a href="#contact">Contact</a></li> -->
 								<li><a href="https://kais-code-factory.netlify.com/">Blog</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
+						<div>
+							<ul class="icons">
+								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="mailto:kl.hawaii@gmail.com" class="icon fa-envelope-open"><span class="label">Email</span></a></li>
+								
+							</ul>
+						</div>
 					</header>
 
 				<!-- Main -->
@@ -96,7 +108,7 @@
 									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
-
+			
 						<!-- Elements -->
 							<article id="elements">
 								<h2 class="major">Elements</h2>
@@ -344,7 +356,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; kais-code-factor. 2019</p>
+						<p class="copyright">&copy; kais-code-factory. 2019</p>
 					</footer>
 
 			</div>
