got more things to work

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <nav>
           <ul>
-            <li><a href="#intro">Intro</a></li>
+            <li><a href="#intro">Bio</a></li>
             <li><a href="#work">Portfolio</a></li>
             <li><a href="#about">Progress</a></li>
             <li><a href="#about">Resume</a></li>
@@ -42,20 +42,24 @@
             <!--<li><a href="#elements">Elements</a></li>-->
           </ul>
         </nav>
-        <div>
+        <div id="icons-container">
           <ul class="icons">
             <li>
-              <a href="#" class="icon fa-twitter"
+              <a
+                href="https://twitter.com/KaiLovingfoss"
+                class="icon fa-twitter"
                 ><span class="label">Twitter</span></a
               >
             </li>
             <li>
-              <a href="#" class="icon fa-facebook"
+              <a
+                href="https://www.linkedin.com/in/kai-lovingfoss/"
+                class="icon fa-linkedin"
                 ><span class="label">Facebook</span></a
               >
             </li>
             <li>
-              <a href="#" class="icon fa-github"
+              <a href="https://github.com/tryingtokeepup" class="icon fa-github"
                 ><span class="label">Github</span></a
               >
             </li>
@@ -266,7 +270,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                 >
               </li>
               <li>
-                <a href="#" class="icon fa-github"
+                <a
+                  href="https://github.com/tryingtokeepup"
+                  class="icon fa-github"
                   ><span class="label">Github</span></a
                 >
               </li>
