got a small video for my portfolio, will add the rest of the portfolio pics tomorrow.

--- a/index.html
+++ b/index.html
@@ -77,39 +77,56 @@
         <!-- Intro -->
         <article id="intro">
           <h2 class="major">Intro</h2>
-          <span class="image main"><img src="images/pic01.jpg" alt=""/></span>
+          <span class="image main"
+            ><img src="images/palm-trees.jpg" alt=""
+          /></span>
           <p>
-            Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin
-            aliquam facilisis ante interdum congue. Integer mollis, nisl amet
-            convallis, porttitor magna ullamcorper, amet egestas mauris. Ut
-            magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
-            By the way, check out my <a href="#work">awesome work</a>.
+            Hey, welcome to my little corner of the internet. I'm Kai, a former
+            Japanese and Math highschool teacher from Hawaii, and overall lover
+            of all things code. I've been messing around with code since I was
+            13, when I first discovered modding and basic Python scripting. I
+            have improved moderately since then, working on a range of fullstack
+            projects during my time at university in Japan, and at Lambda
+            School. (Psst, check <a href="#work">those projects</a> out here.)
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-            dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora
-            torquent per conubia nostra, per inceptos himenaeos. Etiam tristique
-            libero eu nibh porttitor fermentum. Nullam venenatis erat id
-            vehicula viverra. Nunc ultrices eros ut ultricies condimentum.
-            Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae
-            dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in
-            lectus. Pellentesque habitant morbi tristique senectus et netus et
-            malesuada fames ac turpis egestas. In non lorem sit amet elit
-            placerat maximus. Pellentesque aliquam maximus risus, vel sed
-            vehicula.
+            I enjoyed my time getting my degree in Japan, with a major in
+            Geopolitics and a minor in Computer Science (focus and thesis on
+            Computer Security), but I found myself still lacking strong
+            fundamental programming skills. Fortunately, I found Lambda, or
+            rather, Lambda School found me, and I have finally been able to
+            obtain the versitile skillset I've always wanted: actual programming
+            proficency. My time as a teacher has also helped me deal with
+            effectively with the little inter- personal issues that come up in
+            any team project, and I hope I can use these skills to help the next
+            company I join make something special.
           </p>
         </article>
 
         <!-- Work -->
         <article id="work">
           <h2 class="major">Work</h2>
-          <span class="image main"><img src="images/pic02.jpg" alt=""/></span>
+          <span class="video main"
+            ><video width="400" height="320" autoPlay loop muted>
+              <source
+                src="images/demo.mp4"
+                margin="0 auto"
+                type="video/mp4"
+              /></video
+          ></span>
           <p>
-            Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu,
-            at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent
-            urna nisi, fringila lorem et vehicula lacinia quam. Integer
-            sollicitudin mauris nec lorem luctus ultrices.
+            The highlight of my current portfolio, Arq is the cumulative product
+            of a month of work done by my team, which included web designers and
+            iOS developers. Our project was special in that we had to inherit
+            the project from a previous team and add to an already existing
+            codebase. It was not all fun and easy, but having to learn to read
+            another team's code was a valuable experience.
+            <br />
+            Our
+
+            <a href="https://arq.community/">Deployment</a> is here!
           </p>
+          <span class="image main"><img src="images/pic02.jpg" alt=""/></span>
           <p>
             Nullam et orci eu lorem consequat tincidunt vivamus et sagittis
             libero. Mauris aliquet magna magna sed nunc rhoncus pharetra.
@@ -493,7 +510,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
       <!-- Footer -->
       <footer id="footer">
-        <p class="copyright">&copy; kais-code-factory. 2019</p>
+        <p class="copyright">
+          &copy; kais-code-factory. 2019. Inspired by HTML5UP's Dimension.
+        </p>
       </footer>
     </div>
 
