--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
         <article id="work">
           <h2 class="major">Work</h2>
           <span class="video main"
-            ><video width="100%" height="100%" autoPlay loop muted>
+            ><video width="100%" height="100%" controls loop muted>
+              <!-- removed autoPlay from above because it doesn't work for mobile -->
               <source
                 src="images/demo.mp4"
                 margin="0 auto"
