--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     />
     <link rel="stylesheet" href="assets/css/main.css" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
@@ -128,7 +132,7 @@
             <a href="https://arq.community/">Deployment</a> is here!
           </p>
           <span class="image main"><img src="images/pic02.jpg" alt=""/></span>
-          <p>
+          <!-- <p>
             Nullam et orci eu lorem consequat tincidunt vivamus et sagittis
             libero. Mauris aliquet magna magna sed nunc rhoncus pharetra.
             Pellentesque condimentum sem. In efficitur ligula tate urna.
@@ -136,7 +140,7 @@
             Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis
             libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat
             tempus.
-          </p>
+          </p> -->
         </article>
 
         <!-- About -->
