still dealing with portfolio section, working on it, having css issues.

--- a/index.html
+++ b/index.html
@@ -125,22 +125,71 @@
             iOS developers. Our project was special in that we had to inherit
             the project from a previous team and add to an already existing
             codebase. It was not all fun and easy, but having to learn to read
-            another team's code was a valuable experience.
+            another team's code was a valuable experience. Our Front-end was
+            built out of ReactJs, Styled-Components, and Material UI, and our
+            backend was built using a MongoDB database. We connected the two
+            with GraphQL and Apollo.
             <br />
-            Our
-
-            <a href="https://arq.community/">Deployment</a> is here!
+            <br />
+            Our <a href="https://arq.community/">Front-End Deployment</a> is
+            here!
+            <a href="https://github.com/Lambda-School-Labs/labs-team-home"
+              >GitHub repository</a
+            >
+            is here!
           </p>
-          <span class="image main"><img src="images/pic02.jpg" alt=""/></span>
-          <!-- <p>
-            Nullam et orci eu lorem consequat tincidunt vivamus et sagittis
-            libero. Mauris aliquet magna magna sed nunc rhoncus pharetra.
-            Pellentesque condimentum sem. In efficitur ligula tate urna.
-            Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor.
-            Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis
-            libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat
-            tempus.
-          </p> -->
+          <p>
+            The following projects are other team and solo projects written in
+            the last year, from most recent to oldest. Hopefully a progression
+            of skill can be seen, but you be the arbiter of that. :)
+          </p>
+
+          <div class="project-body">
+            <div class="project-row">
+              <div class="project-card">
+                <img src="images/post-here.png" />
+                <div class="card-title">
+                  <h3>Post-Here</h3>
+                  <i id="expand" class="icon fa-expand"></i>
+                </div>
+                <div class="card-description">
+                  <p>
+                    Front-end: React, Material UI </br>
+                    Backend: Express, Node.js </br>
+                    DS: Jupyter Notebook, Flask
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a href="https://post-here.netlify.com/"
+                    ><i class="icon fa-external-link"></i
+                  ></a>
+                  <a href="https://github.com/lambda-post-here"
+                    ><i class="icon fa-github"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="project-card">
+                <img src="images/post-here.png" />
+                <div class="card-title">
+                  <h3>Post-Here</h3>
+                  <i id="expand" class="icon fa-expand"></i>
+                </div>
+                <div class="card-description">
+                  <p>
+                  
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a href="https://post-here.netlify.com/"
+                    ><i class="icon fa-external-link"></i
+                  ></a>
+                  <a href="https://github.com/lambda-post-here"
+                    ><i class="icon fa-github"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+          </div>
         </article>
 
         <!-- About -->
