--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="content">
           <div class="inner">
             <h1>Kai Lovingfoss - With Aloha</h1>
-            <p>Engineer, Dog Lover, not very good at surfing.</p>
+            <p>Software Engineer, Dog Lover, not very good at surfing.</p>
           </div>
         </div>
         <nav>
@@ -89,21 +89,14 @@
             Japanese and Math highschool teacher from Hawaii, and overall lover
             of all things code. I've been messing around with code since I was
             13, when I first discovered modding and basic Python scripting. I
-            have improved moderately since then, working on a range of fullstack
+            have improved since then, working on a range of fullstack
             projects during my time at university in Japan, and at Lambda
             School. (Psst, check <a href="#work">those projects</a> out here.)
           </p>
           <p>
-            I enjoyed my time getting my degree in Japan, with a major in
-            Geopolitics and a minor in Computer Science (focus and thesis on
-            Computer Security), but I found myself still lacking strong
-            fundamental programming skills. Fortunately, I found Lambda, or
-            rather, Lambda School found me, and I have finally been able to
-            obtain the versitile skillset I've always wanted: actual programming
-            proficency. My time as a teacher has also helped me deal with
-            effectively with the little inter- personal issues that come up in
-            any team project, and I hope I can use these skills to help the next
-            company I join make something special.
+            Current focus: JavaScript, GraphQL/Apollo, React/Redux, Material UI</br>
+            Exploring: Python w/ Machine Learning, C++</br>
+            Eventually: Unity, Go, Rust</br>
           </p>
         </article>
 
@@ -197,13 +190,7 @@
           <h2 class="major">About</h2>
           <span class="image main"><img src="images/pic03.jpg" alt=""/></span>
           <p>
-            Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent
-            eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam
-            erat volutpat. Praesent urna nisi, fringila lorem et vehicula
-            lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.
-            Aliquam libero et malesuada fames ac ante ipsum primis in faucibus.
-            Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit
-            amet.
+            
           </p>
         </article>
 
