last addition before school work time

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
         <div class="content">
           <div class="inner">
-            <h1>Kai Lovingfoss - With Aloha</h1>
-            <p>Software Engineer, Dog Lover, not very good at surfing.</p>
+            <h1>Hi! I'm Kai Lovingfoss.</h1>
+            <p><a href="https://github.com/tryingtokeepup">Software Engineer</a>, Dog Lover, not very good at surfing.</p>
           </div>
         </div>
         <nav>
