added a new pic of hawaii, changed a few things.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <article id="intro">
           <h2 class="major">Intro</h2>
           <span class="image main"
-            ><img src="images/palm-trees.jpg" alt=""
+            ><img src="images/hawaii.jpg" alt=""
           /></span>
           <p>
             Hey, welcome to my little corner of the internet. I'm Kai, a former
@@ -196,6 +196,7 @@
                       Role: Solo/Front-End </br>
                       Front-end: React, Material UI </br>
                       Backend: Express, Node.js </br>
+                    </br>
                     </p>
                   </div>
                   <div class="card-footer">
@@ -216,9 +217,9 @@
                     <div class="card-description">
                       <p>
                         Role: Backend Engineer </br>
-                        Front-end: React/Redux, Styled-Components, Next.js </br>
+                        Front-end: React/Redux </br>
                         Backend: Express, Node.js </br>
-                        
+                      </br>
                       </p>
                     </div>
                     <div class="card-footer">
