harmonized headers, fixed external links

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="content">
           <div class="inner">
             <h1>Hi! I'm Kai Lovingfoss.</h1>
-            <p><a href="https://github.com/tryingtokeepup">Software Engineer</a>, Dog Lover, not very good at surfing.</p>
+            <p><a href="https://github.com/tryingtokeepup" target="_blank">Software Engineer</a>, Dog Lover, not very good at surfing.</p>
           </div>
         </div>
         <nav>
@@ -42,7 +42,7 @@
             <li><a href="#about">Progress</a></li>
             <li><a href="#about">Resume</a></li>
             <!-- <li><a href="#contact">Contact</a></li> -->
-            <li><a href="https://kais-code-factory.netlify.com/">Blog</a></li>
+            <li><a href="https://kais-code-factory.netlify.com/" target="_blank" >Blog</a></li>
             <!--<li><a href="#elements">Elements</a></li>-->
           </ul>
         </nav>
@@ -80,7 +80,7 @@
       <div id="main">
         <!-- Intro -->
         <article id="intro">
-          <h2 class="major">Intro</h2>
+          <h2 class="major">Bio</h2>
           <span class="image main"
             ><img src="images/hawaii.jpg" alt=""
           /></span>
@@ -102,7 +102,7 @@
 
         <!-- Work -->
         <article id="work">
-          <h2 class="major">Work</h2>
+          <h2 class="major">Portfolio</h2>
           <span class="video main"
             ><video width="100%" height="100%" controls loop muted>
               <!-- removed autoPlay from above because it doesn't work for mobile -->
@@ -124,9 +124,9 @@
             with GraphQL and Apollo.
             <br />
             <br />
-            Our <a href="https://arq.community/">Front-End Deployment</a> is
+            Our <a href="https://arq.community/" target="_blank">Front-End Deployment</a> is
             here!
-            <a href="https://github.com/Lambda-School-Labs/labs-team-home"
+            <a href="https://github.com/Lambda-School-Labs/labs-team-home" target="_blank"
               >GitHub repository</a
             >
             is here!
@@ -154,10 +154,10 @@
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a href="https://post-here.netlify.com/"
+                  <a href="https://post-here.netlify.com/" target="_blank"
                     ><i class="icon fa-external-link"></i
                   ></a>
-                  <a href="https://github.com/lambda-post-here"
+                  <a href="https://github.com/lambda-post-here" target="_blank"
                     ><i class="icon fa-github"></i
                   ></a>
                 </div>
@@ -177,10 +177,10 @@
                       </p>
                 </div>
                 <div class="card-footer">
-                  <a href="https://pairme.netlify.com/"
+                  <a href="https://pairme.netlify.com/" target="_blank"
                     ><i class="icon fa-external-link"></i
                   ></a>
-                  <a href="https://github.com/NandoTheessen/Pair-Me-LS-Winter-Hakathon-Submission"
+                  <a href="https://github.com/NandoTheessen/Pair-Me-LS-Winter-Hakathon-Submission" target="_blank"
                     ><i class="icon fa-github"></i
                   ></a>
                 </div>
@@ -200,10 +200,10 @@
                     </p>
                   </div>
                   <div class="card-footer">
-                    <a href="https://kais-notes.netlify.com/"
+                    <a href="https://kais-notes.netlify.com/" target="_blank"
                       ><i class="icon fa-external-link"></i
                     ></a>
-                    <a href="https://github.com/tryingtokeepup/front-end-project-week"
+                    <a href="https://github.com/tryingtokeepup/front-end-project-week" target="_blank"
                       ><i class="icon fa-github"></i
                     ></a>
                   </div>
@@ -223,10 +223,10 @@
                       </p>
                     </div>
                     <div class="card-footer">
-                      <a href="https://tipsease-marketing.netlify.com/"
+                      <a href="https://tipsease-marketing.netlify.com/" target="_blank"
                         ><i class="icon fa-external-link"></i
                       ></a>
-                      <a href="https://github.com/tipsease/tipsease-backend-kai-lovingfoss"
+                      <a href="https://github.com/tipsease/tipsease-backend-kai-lovingfoss" target="_blank"
                         ><i class="icon fa-github"></i
                       ></a>
                     </div>
@@ -237,11 +237,11 @@
 
         <!-- About -->
         <article id="about">
-          <h2 class="major">About</h2>
+          <h2 class="major">Progress</h2>
           <span class="image main"><img src="images/pioneer.png" alt=""/></span>
           <p>
             Currently, I am particpating in the Pioneer App Challenge, and I will update this with progress 
-            over the weeks. I am posting updates in my technical blog, so please <a href="https://kais-code-factory.netlify.com/">check it out here</a>!
+            over the weeks. I am posting updates in my technical blog, so please <a href="https://kais-code-factory.netlify.com/" target="_blank">check it out here</a>!
           </p>
         </article>
 
