--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
             with GraphQL and Apollo.
             <br />
             <br />
-            Our <a href="https://arq.community/" target="_blank">Front-End Deployment</a> is
+            Our <a href="https://arq.community/" target="_blank">completed project</a> is
             here!
             <a href="https://github.com/Lambda-School-Labs/labs-team-home" target="_blank"
-              >GitHub repository</a
+              >The GitHub repository</a
             >
             is here!
           </p>
