jamari helped me fine a bug.

--- a/index.html
+++ b/index.html
@@ -165,11 +165,12 @@
               <div class="project-card">
                 <img src="images/pair-me.png" />
                 <div class="card-title">
-                  <h3>Pair Me - Lambda Hackathon (1st Place)</h3>
+                  <h3>Pair Me </h3>
                   <i id="expand" class="icon fa-expand"></i>
                 </div>
                 <div class="card-description">
                     <p>
+                        <b>Lambda Hackathon (1st Place)</b></br>
                         Role: Front-End Dev </br>
                         Front-end: React/Redux </br>
                         Backend: Express, Node.js </br>
