--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li><a href="#intro">Bio</a></li>
             <li><a href="#work">Portfolio</a></li>
             <li><a href="#about">Progress</a></li>
-            <li><a href="#about">Resume</a></li>
+            <li><a href="images/Kai_Lovingfoss_Resume.pdf" target="_blank">Resume</a></li>
             <!-- <li><a href="#contact">Contact</a></li> -->
             <li><a href="https://kais-code-factory.netlify.com/" target="_blank" >Blog</a></li>
             <!--<li><a href="#elements">Elements</a></li>-->
