--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               >
             </li>
             <li>
-              <a href="mailto:kl.hawaii@gmail.com" class="icon fa-envelope-open"
+              <a target="_top" href="mailto:kl.hawaii@gmail.com" class="icon fa-envelope-open"
                 ><span class="label">Email</span></a
               >
             </li>
