--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               >
             </li>
             <li>
-              <a target="_top" href="mailto:kl.hawaii@gmail.com" class="icon fa-envelope-open"
+              <a target="_top" class="icon fa-envelope-open"
                 ><span class="label">Email</span></a
               >
             </li>
@@ -522,7 +522,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
           <section>
             <h3 class="major">Form</h3>
-            <form method="GET" action="mailto:kl.hawaii@gmail.com">
+            <form method="GET">
               <div class="fields">
                 <div class="field half">
                   <label for="demo-name">Name</label>
